--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </nav>
-                <div id="header-search-box">
+<!--                <div id="header-search-box">
                     <a id="search-menu" href="#"><span id="search-icon" class="ion-ios-search-strong"></span></a>
                     <div id="search-form" class="search-form">
                         <form role="search" method="get" id="searchform" action="#">
@@ -62,7 +62,7 @@
                             <button type="submit"><span class="ion-ios-search-strong"></span></button>
                         </form>
                     </div>
-                </div>
+                </div>-->
             </div><!-- col-md-8 -->
         </div>
     </header>
