--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -155,11 +155,12 @@
 			        <p class="ab_t">工作技能：</p>
 			        <p>1、熟悉python脚本语言</p>
 			        <p>2、熟悉Linux系统的安装配置，有丰富的Ubuntu系统使用经验</p>
-			        <p>3、熟悉Nginx，Tomcat,mysql等服务</p>
-                                <p>4、熟悉Zabbix等监控工具的使用</p>
-                                <p>5、熟悉docker容器</p>
-			        <p>5、熟悉html5，CSS3，javascript，熟悉页面架构和布局</p>
-			        <p>6、熟悉Javascript框架</p>
+			        <p>3、熟悉Nginx，Tomcat等服务</p>
+                                <p>4、熟悉mysql，redis，mongodb等数据库</P>
+                                <p>5、熟悉Zabbix等监控工具的使用</p>
+                                <p>6、熟悉docker容器</p>
+			        <p>7、熟悉html5，CSS3，javascript，熟悉页面架构和布局</p>
+			        <p>8、熟悉Javascript框架</p>
 			      </div>
 			    </div>
 			    <div class="navitem" name = "top4">
@@ -168,7 +169,7 @@
 			        <p>域 名：www.mrqiaoblog.com 创建于2018年11月25日&nbsp;</p>
 			        <p>服务器：阿里云服务器&nbsp;&nbsp;<a href="https://promotion.aliyun.com/ntms/act/ambassador/sharetouser.html?userCode=8smrzoqa&amp;productCode=vm" target="_blank"><span style="color:#FF0000;"><strong>前往阿里云官网购买&gt;&gt;</strong></span></a></p>
 			        <p>备案号：京ICP备19003619号</p>
-			        <p>程 序：Dnjango+Nginx+ubuntu+uwsgi&nbsp; &nbsp;<u></u></p>
+			        <p>程 序：Django+Nginx+ubuntu+uwsgi&nbsp; &nbsp;<u></u></p>
 			        <p class="ab_t">微信赞赏码：</p>
 			        <p><img src="{% static 'blog/img/wxfkm.png' %}"></p>
 			        <p class="ab_t">支付宝：</p>
